# tfm

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  source_me
config/: README.simple_test_configs
config/ascii_simulator_example/: DataLogger1.fcl  Dispatcher1.fcl  EventBuilder2.fcl  component01.fcl
config/circular_buffer_mode_example/: DataLogger2.fcl  EventBuilder3.fcl  boot.mu2edaq.txt  boot.txt  component01_hw_cfg.fcl  component02_hw_cfg.fcl  component03_hw_cfg.fcl
config/circular_buffer_mode_withRM/: DataLogger1.fcl  DataLogger2.fcl  Dispatcher1.fcl  EventBuilder4.fcl  README  RoutingManager1.fcl  boot.mu2edaq.txt  boot.txt  component01_hw_cfg.fcl  component02_hw_cfg.fcl  component04_hw_cfg.fcl  component05_hw_cfg.fcl  component07_hw_cfg.fcl  component08_hw_cfg.fcl  component09_hw_cfg.fcl  component11_hw_cfg.fcl  component12_hw_cfg.fcl  component13_hw_cfg.fcl  component14_hw_cfg.fcl  component15_hw_cfg.fcl  component16_hw_cfg.fcl  component_standard.fcl
config/common/: cfo_fragment_receiver.fcl  data_logger.fcl  dispatcher.fcl  event_builder.fcl  mu2e_subevent_receiver.fcl  prolog.fcl  toysim_data_logger.fcl  toysim_event_builder.fcl  toysim_fragment_receiver.fcl  tracker_brdr.fcl  trigger_tables.fcl  tt_demo_mc2_v001.fcl  tt_tracker_mc2_v001.fcl  tt_tracker_mc2_v002.fcl  tt_tracker_mc2_v003.fcl
config/complex_subsystems/: DataLogger1.fcl  DataLogger2.fcl  Dispatcher1.fcl  EventBuilder1.fcl  EventBuilder2.fcl  EventBuilder3.fcl  README  boot.mu2edaq.txt  boot.txt  component01.fcl  component02.fcl  component03.fcl  component_subsystem_2.fcl  known_boardreaders_list_example  known_boardreaders_list_example.mu2edaq
config/complicated_subsystems/: DataLogger1.fcl  DataLogger2.fcl  Dispatcher1.fcl  (+14 more)
doc/: #available_configurations.org#  .#available_configurations.org  artdaq_daqinterface.org  available_configurations.org  communication_with_artdaq.org  dm.org  dqm.org  environment_variables.org  settings.org  software_setup.org  test_example.org  test_examples.org  tfm.org  work_in_progress.org  xmlrpc.org
examples/: .setup_fhiclcpp  README  boot.mu2edaq.txt  boot.txt  daqinterface_overrides_for_experiment.py  known_boardreaders_list_example  known_boardreaders_list_example.mu2edaq  new_boot.json  process_requirements_list_example  rawEventDump.fcl  settings_example  user_source_me  user_sourcefile_example
odb/: ArtdaqConfiguratons.json
rc/: __init__.py  compatibility.py
test/: test_001.py
ups/: product_deps
utils/: convert_fhicl_dumped_bootfile_to_traditional_format.awk  fhiclize_boot_file.awk  fhiclize_known_boardreaders_list_file.awk  fhiclize_metadata_file.awk  list_global_configs_parse.awk
(+1001 files in other folders)
